# CodeCraftStudio1

./: .replit  LICENSE.txt  README.md  README_PRODUCTION.md  advanced_audio_mixer.py  ai_agent.py  ai_services.py  analytics.py  app.py  business_licensing.py  collaboration_system.py  error_handler.py  health_monitor.py  import_handler.py  main.py  models.py  models_new.py  models_old.py  music_generator.py  production_config.py  pyproject.toml  replit.md  requirements.txt  routes.py  simple_app.py  video_generator.py  voice_training_system.py  youtube_uploader.py
attached_assets/: 111CodeCraftStudio_FULL_REPLIT_1751450539863.py  CodeCraftStudio_ALL_IN_ONE_PROJECT (2)_1751456840704.py  CodeCraftStudio_ALL_IN_ONE_PROJECT_1751456840708.py  CodeCraftStudio_FINAL_RENDER_UPLOAD_1751450539864.py  CodeCraftStudio_FINAL_RENDER_UPLOAD_1751456662536.py  CodeCraftStudio_FULL_REPLIT_1751459026652.py  CodeCraftStudio_FULL_REPLIT_INSTRUCTIONS_1751450539863.txt  CodeCraftStudio_FULL_REPLIT_INSTRUCTIONS_1751456662537.txt  CodeCraftStudio_PRODUCTION_FINAL_1751459026648.py  CodeCraftStudio_WITH_VOICE_1751459026648.py  CodeCraftStudio_YOUTUBE_REPLIT_FINAL_1751456840709.py  CodeCraft_Replit_ONEFILE_FINAL_1751450539863.py  CodeCraft_Replit_ONEFILE_FINAL_1751459026653.py  CodeCraft_Replit_OneFile 2_1751450539863.py  CodeCraft_Replit_OneFile_1751456840704.py  Document (6)_1751450539863.docx  Document (6)code.py_1751450539864.docx  LICENSE_CodeCraftStudio 2_1751450539863.txt  LICENSE_CodeCraftStudio_1751457616677.txt  README_CodeCraftStudio_1751456840705.md  (+4 more)
instance/: codecraft_studio.db
(+10 files in other folders)
