[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gtts>=2.5.4",
    "gunicorn>=23.0.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "openai>=1.93.0",
    "psycopg2-binary>=2.9.10",
    "pydub>=0.25.1",
    "sqlalchemy>=2.0.41",
    "werkzeug>=3.1.3",
]
